# snopt-haskell

./: README.md  hsnopt.cabal
hsnopt/: Rosenbrock.hs  hsnopt.cabal
hsnopt-bindings/: hsnopt-bindings.cabal
hsnopt-bindings/src/Snopt/: Bindings.hs
hsnopt/src/: LlvmAd.hs  Nlp.hs  Rosenbrock.hs  Snopt.hs
hsnopt/src/Snopt/: AD.hs  Internal.hs  LogsAndErrors.hs  Nlp.hs  SnoptA.hs
snopt/: snopt.cabal
snopt-base/: snopt-base.cabal
snopt-base/src/Snopt/: FFI.hs
snopt/src/Snopt/: Internal.hs  SnoptA.hs  SnoptC.hs
src/: Snopt.hs
