name:                hsnopt
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Greg Horn
maintainer:          gregmainland@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  exposed-modules:     Snopt.SnoptA
  other-modules:       Snopt.Internal
  build-depends:       base ==4.6.*,
                       hsnopt-bindings,
                       vector,
                       transformers,
                       mtl,
                       lens
